--- a/src/app/styles/driver.scss
+++ b/src/app/styles/driver.scss
@@ -1,10 +1,10 @@
-.driver{
+.driver {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  &-top{
+  &-top {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -23,15 +23,14 @@
       justify-content: space-between;
       width: 95%;
       padding-block-start: 0.5rem;
-   .image{
-    width: 4rem;
-      object-fit: contain;
-       img{
-        width: 100%;
-        height: auto;
-
+      .image {
+        width: 4rem;
+        object-fit: contain;
+        img {
+          width: 100%;
+          height: auto;
+        }
       }
-   }
     }
     &-body {
       width: 90%;
@@ -45,6 +44,19 @@
         h2 {
           font-size: 18px;
           font-weight: 600;
+        }
+        &-right {
+          display: flex;
+          align-items: center;
+          .red {
+            color: red;
+          }
+          .green {
+            color: green;
+          }
+          svg {
+            width: 1rem;
+          }
         }
       }
     }
